# urirun-connector-nodeadmin

./: README.md  pyproject.toml
.github/workflows/: ci.yml  integration-urirun-llm.yml
scripts/: ci_urirun_llm_smoke.py
tests/: test_nodeadmin.py
urirun_connector_nodeadmin/: __init__.py  connector.manifest.json  core.py  ops.py
